[workspace]
resolver = "2"
members = ["examples/*"]

[package]
name = "busride-rs"
version = "0.1.0"
edition = "2021"
authors = ["Nick Fagerlund <nick.fagerlund@gmail.com>"]

[dependencies]
tokio = { version = "1.36.0", features = [
    "macros",
    "net",
    "rt",
    "signal",
    "sync",
] }
fastcgi-server = { git = "https://github.com/nfagerlund/fastcgi-server.git", rev = "d8e0160", features = [
    "async",
    "http",
] }
tracing = "0.1.40"
tokio-util = { version = "0.7.0", features = ["codec", "compat"] }
tokio-stream = "0.1.14"
futures-util = { version = "0.3.22", default-features = false, features = [
    "std",
    "io",
] }
http = { version = "1.0.0" }
axum = { version = "0.7.4" }
tower = "0.4.13"
bytes = "1.5.0"
