[package]
name = "dadjoke"
version = "0.1.0"
edition = "2021"

[dependencies]
busride-rs = { path = "../.." }
serde = { version = "1", features = ["derive"] }
axum = { version = "0.7.4" }
tokio = { version = "1.36.0", features = ["full"] }
clap = { version = "4.4.18", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
